Fixing breadcrumb alignment.

--- a/src/view/dataElements/xdmObject/components/nodeEdit.styl
+++ b/src/view/dataElements/xdmObject/components/nodeEdit.styl
@@ -1,4 +1,3 @@
-
 .NodeEdit-breadcrumbs {
-  margin-left: -4px;
+  margin-left: calc(-1 * var(--spectrum-global-dimension-static-size-100));
 }
